--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
+    "expo-media-library": "~16.0.3",
+    "expo-print": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
