--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~12.0.5",
     "expo-media-library": "~16.0.3",
     "expo-print": "~13.0.1",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
