--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
-    "expo-font": "~12.0.5",
+    "expo": "~51.0.14",
+    "expo-font": "~12.0.7",
     "expo-media-library": "~16.0.3",
     "expo-print": "~13.0.1",
     "expo-splash-screen": "^0.27.5",
@@ -25,7 +25,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -39,6 +39,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "@react-native-masked-view/masked-view": "^0.3.1"
   },
   "private": true
 }
