--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
+    "expo-asset": "^10.0.9",
     "expo-font": "~12.0.7",
     "expo-media-library": "~16.0.3",
     "expo-print": "~13.0.1",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -35,7 +37,8 @@
     "react-native-screens": "3.31.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-navigation-backhandler": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
